  * Use the kernel-specific discover and isa-pnp-modules include files
    rather than explicitly listing those udebs throughout pkg-lists.
  * Make a note about another possible cause for 'locale charmap' being
    wrong during font generation, since it confused me for days ...
  * Document new-style timezone preseeding, available from base-config
    2.65.

  [ Frans Pop ]
  * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
    about missing lists.
  * Add build dependencies needed to build PDF/TXT versions of the manual
  * Make main build script for the manual fail on errors
  * Introduce cascading stylesheet for the HTML version of the manual.

  [ Martin Michlmayr ]
  * Add support for rescue mode to mipsel/cobalt.
  * Rename the default target of {mips,mipsel}/sb1-swarm-bn from
    'installer' to 'install' in compliance with other arches.
  * Add support for rescue mode to {mips,mipsel}/sb1-swarm-bn.

  [ Stephen R. Marenka ]
  * m68k tools rework.
  * incorporate boot/m68k/amiga scripts in tools.
  * initial support for future penguin and amiboot packages.
  * drop 2.2 kernel support for everything but macs.
  [ Eddy Petrisor ]
  * Removed ASCII characters from needed-characters/vi

 -- Joey Hess <joeyh@debian.org>  Fri, 24 Jun 2005 15:50:52 -0400

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer