@@ -331,6 +331,16 @@ If you are using a 2.2.x kernel, you may need to set &ramdisksize;.
 </para></listitem>
 </varlistentry>
 
+<varlistentry>
+<term>rescue/enable</term>
+<listitem><para>
+
+Set to <userinput>true</userinput> to enter rescue mode rather than
+performing a normal installation. See <xref linkend="rescue"/>.
+
+</para></listitem>
+</varlistentry>
+
 </variablelist>
   </sect2>
  </sect1>
