@@ -9,5 +9,6 @@
 &reactivating-win.xml;
 &further-reading.xml;
 &kernel-baking.xml;
+&rescue.xml;
 
 </chapter>
