@@ -128,6 +128,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
     wrong during font generation, since it confused me for days ...
   * Document new-style timezone preseeding, available from base-config
     2.65.
+  * Document rescue mode in the manual.
 
   [ Frans Pop ]
   * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
